# scs

./: .TODO  .appveyor.yml  .buildinfo  .bumpversion.cfg  .gitignore  .note_on_scale  .travis.yml  ANDERSON_TODO  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.txt  Makefile  README.md  TODO  appveyor.yml  coverage.info  data_sparse  demo.gcno  fix_dylib.sh  genindex.html  index.html  mycoverage.info  objects.inv  randomSOCPProb.gcno  run_tests  scs.mk  search.html  searchindex.js  test.js  test_runner.gcda  test_runner.gcno
.github/: ISSUE_TEMPLATE.md
.github/parent-workflows/: cmake.yml  gpu.yml
.github/workflows/: arch.yml  build.yml  build_accelerate.yml  build_mkl.yml  build_openmp.yml  build_spectral.yml  build_wasm.yml  buildpp.yml  clang.yml  cmake.yml  cmake_cudss.yml  cmake_mkl.yml  cmake_openmp.yml  coverage.yml  docs.yml  gpu.yml  mkl_interface_mismatch.yml  valgrind.yml  weekly.yml
_sources/: index.rst.txt
_sources/algorithm/: acceleration.rst.txt  index.rst.txt  scale.rst.txt
_sources/api/: c.rst.txt  compile_flags.rst.txt  cones.rst.txt  index.rst.txt  info.rst.txt  julia.rst.txt  matlab.rst.txt  matrices.rst.txt  r.rst.txt  settings.rst.txt
_sources/blas_lapack/: index.rst.txt
_sources/citing/: index.rst.txt
_sources/contributing/: index.rst.txt
_sources/examples/: c.rst.txt  julia.rst.txt  matlab.rst.txt  python.rst.txt  r.rst.txt
_sources/install/: c.rst.txt  index.rst.txt  julia.rst.txt  matlab.rst.txt  python.rst.txt  r.rst.txt  ruby.rst.txt
_sources/linear_solver/: index.rst.txt
_sources/solver/: cones.rst.txt  index.rst.txt  scale.rst.txt  settings.rst.txt  termination.rst.txt
_static/: documentation_options.js
_static/css/: scs_theme.css
algorithm/: acceleration.html  equilibration.html  index.html  relaxation.html  scale.html  warm_start.html
api/: c.html  compile_flags.html  cones.html  exit_flags.html  index.html  info.html  javascript.html  julia.html  matlab.html  matrices.html  python.html  r.html  ruby.html  settings.html
bindings/embind/: scs_bindings.cpp
blas_lapack/: index.html
citing/: index.html
cmake/: AddInstallRPATHSupport.cmake  scs_types.h.in
contributing/: index.html
coverage-html/: index-sort-f.html  index-sort-l.html  index.html
coverage-html/src/: directions.c.func-sort-c.html  directions.c.func.html  directions.c.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  linAlg.c.func-sort-c.html  linAlg.c.func.html  linAlg.c.gcov.html  unit_test_util.c.func-sort-c.html  unit_test_util.c.func.html  unit_test_util.c.gcov.html
direct/: private.c  private.h
docs/: .buildinfo  annotated.html  benchmarks__page_8h.html  benchmarks__page_8h_source.html  classes.html  cones_8c.html  cones_8h.html  cones_8h_source.html  constants_8h.html  constants_8h_source.html  cs_8c.html  cs_8h.html  cs_8h_source.html  ctrlc_8c.html  ctrlc_8h.html  ctrlc_8h_source.html  dev__page_8h.html  dev__page_8h_source.html  dir_208d2690607c4e3d3fabfa1d18673d36.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  directions_8c.html  directions_8h.html  directions_8h_source.html  directions__page_8h.html  directions__page_8h_source.html  files.html  functions.html  functions_vars.html  genindex.html  glbopts_8h.html  glbopts_8h_source.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  (+86 more)
docs_src/: Doxyfile  Makefile  conf.py  index.rst  requirements.txt
examples/: c.html  index.html  javascript.html  julia.html  matlab.html  python.html  r.html  ruby.html
gpu/: amatrix.h  common.c  common.h  private.c  private.cu  private.h
help/: index.html
include/: aa.h  aa_stats.h  accel.h  cones.h  constants.h  cs.h  ctrlc.h  directions.h  glbopts.h  linAlg.h  linSys.h  lin_sys.h  linalg.h  linsys.h  normalize.h  rw.h  scs.h  scs_blas.h  scs_types.h  scs_work.h  unit_test_util.h  util.h  util_spectral_cones.h
indirect/: private.c  private.h
install/: c.html  index.html  javascript.html  julia.html  matlab.html  python.html  r.html  ruby.html
java/: Makefile  README  org_scs_DirectSolver.h  org_scs_IndirectSolver.h  scs_DirectSolver.h  scs_IndirectSolver.h  scsjni.c
linear_solver/: index.html
linsys/: amatrix.c  amatrix.h  common.c  common.gcno  common.h  csparse.c  csparse.h  matrix.c  scs_matrix.c  scs_matrix.h
linsys_dense/: README  amatrix.h  common.c  common.h  demo_SOCP_direct  demo_SOCP_indirect  problemUtils.h  randomSOCPProb.c
matlab/: README.md  compileIndirect.m  compile_direct.m  compile_gpu.m  compile_indirect.m  cvx_install_scs.m  cvx_scs.m  install_scs_cvx.m  make_scs.m  scs.m  scs_direct.m  scs_indirect.m  scs_mex.c  scs_version_mex.c  test_gemm.m  write_scs_data.m
nbproject/: configurations.xml  project.properties  project.xml
pages/: benchmarks_page.h  dev_page.h  directions_page.h  mainpage.h  socp_page.h
python/: README.md  main.py  mem.py  scs.py  scsmodule.c  setup.py  test_scs_basic.py  test_scs_rand.py  test_scs_sdp.py
r/: DESCRIPTION  INSTALL  NAMESPACE  cleanup  configure  configure.ac  install.sh
r/R/: scs.R
r/demo/: example.R  randomLp.R  tiny.R
r/man/: scs.Rd
r/src/: Makevars.in  scsr.c
solver/: acceleration.html  compile_flags.html  cones.html  equilibration.html  exit_flags.html  index.html  info.html  scale.html  settings.html  termination.html  warm_start.html
src/: Doxyfile  Makefile  aa.c  accel.c  cones.c  cones.gcno  conf.py  cs.c  cs.gcno  ctrlc.c  ctrlc.gcno  directions.c  directions.gcda  directions.gcno  exp_cone.c  index.rst  linAlg.c  linAlg.gcda  linAlg.gcno  lin_alg.c  linalg.c  normalize.c  run_scs.c  rw.c  scs.c  scs.gcno  scs_version.c  scs_version.gcno  unit_test_util.c  unit_test_util.gcda  unit_test_util.gcno  util.c  util.gcno
test/: minunit.h  mkl_interface_mismatch.c  problem_utils.h  random_socp_prob.c  rng.h  run_from_file.c  run_tests.c  test_failure_rate.c  test_wasm.js
test2/: random_socp_prob.c
(+708 files in other folders)
